--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <header>
       <h1 class="page-title">Taskinator</h1>
       <p>Click button below to add a new task</p>
-      <button class="btn">Add Task</button>
+      <button id="save-task" class="btn">Add Task</button>
     </header>
     <main class="page-content">
       <section class="task-list-wrapper">
         <h2 class="list-title">Tasks To Do</h2>
-        <ul class="task-list">
+        <ul class="task-list" id="tasks-to-do">
           <li class="task-item">Add your tasks below!</li>
         </ul>
       </section>
     </main>
-    <footer>&copy; 2020 by Taskinator</footer>
+    <footer>&copy; 2022 by Meerkat Creations</footer>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
